<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="07A-UD-pJb">
    <device id="retina4_0" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
...
                                                        <connections>
                                                            <segue destination="VrP-lp-YSW" kind="custom" customClass="TRIKSegueNoAnimation" customModule="TiemzyaRiOSKit" animates="NO" id="izs-HL-AOm"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q1I-6m-rlc">
                                                        <rect key="frame" x="0.0" y="80" width="145" height="30"/>
                                                        <state key="normal" title="Auto Destroy Overlay">
                                                            <color key="titleColor" red="0.031372549020000001" green="0.24313725489999999" blue="0.48627450979999998" alpha="1" colorSpace="calibratedRGB"/>
                                                        </state>
                                                        <connections>
                                                            <segue destination="v4V-5u-xcZ" kind="custom" customClass="TRIKSegueNoAnimation" customModule="TiemzyaRiOSKit" animates="NO" id="jmn-rR-No7"/>
                                                        </connections>
                                                    </button>
...
                                                                            </label>
                                                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="nKX-aY-RSt">
                                                                                <rect key="frame" x="0.0" y="23" width="280" height="32"/>
                                                                                <segments>
                                                                                    <segment title="white"/>
                                                                                    <segment title="light"/>
                                                                                    <segment title="dark"/>
                                                                                    <segment title="black"/>
                                                                                    <segment title="tiemzyar"/>
                                                                                </segments>
                                                                                <color key="tintColor" red="0.031372549020000001" green="0.24313725489999999" blue="0.48627450979999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                                <connections>
                                                                                    <action selector="colorStyleDidChange:" destination="Nq2-Nh-zxW" eventType="valueChanged" id="Emd-bt-eti"/>
...
